err5.txt
In file included from examples\__lp_05_system_sqlite.c:3:
examples\__lp_05_system_sqlite.c: In function 'lp_main':
examples\__lp_05_system_sqlite.c:13:22: error: incompatible type for argument 1 of 'lp_print_int'
   13 |     lp_print_generic(lp_os);
      |                      ^~~~~
      |                      |
      |                      LpVal
D:/LP/runtime/lp_runtime.h:75:3: note: in definition of macro 'lp_print_generic'
   75 | )(x)
      |   ^
D:/LP/runtime/lp_runtime.h:50:41: note: expected 'int64_t' {aka 'long long int'} but argument is of type 'LpVal'
   50 | static inline void lp_print_int(int64_t v) { printf("%" PRId64 "\n", v); }
      |                                 ~~~~~~~~^
examples\__lp_05_system_sqlite.c:14:22: error: incompatible type for argument 1 of 'lp_print_int'
   14 |     lp_print_generic(lp_arch);
      |                      ^~~~~~~
      |                      |
      |                      LpVal
D:/LP/runtime/lp_runtime.h:75:3: note: in definition of macro 'lp_print_generic'
   75 | )(x)
      |   ^
D:/LP/runtime/lp_runtime.h:50:41: note: expected 'int64_t' {aka 'long long int'} but argument is of type 'LpVal'
   50 | static inline void lp_print_int(int64_t v) { printf("%" PRId64 "\n", v); }
      |                                 ~~~~~~~~^
[LP] Compilation failed (gcc exit 1)
[LP Build] SQLite module detected (Tier 1). Statically linking sqlite3.o...
